<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="45dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@drawable/logobmg"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="14dp"
            android:layout_gravity="center_horizontal" />

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email"
                android:textColor="@color/white"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                android:fontFamily="sans-serif"
                android:textColor="@color/white"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:theme="@style/AppTheme.Button"
            android:text="@string/signin_button"/>

        <TextView android:id="@+id/signup_link"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/signup_link"
            android:gravity="center"
            android:textSize="16dip"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/facebook_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.Button.Facebook"
            android:drawableLeft="@drawable/facebook"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:gravity="center"
            android:text="@string/facebook_button"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/twitter_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:theme="@style/AppTheme.Button.Twitter"
            android:drawableLeft="@drawable/twitter"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:gravity="center"
            android:text="@string/twitter_button"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/google_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:theme="@style/AppTheme.Button.Google"
            android:drawableLeft="@drawable/google"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:gravity="center"
            android:text="@string/google_button"/>

    </LinearLayout>
</ScrollView>